--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         <a-asset-item id="santa-mtl" src="Cow.mtl"></a-asset-item>
     </a-assets>
 　　　　　　　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
-    <a-marker preset="ARtest">
+    <a-marker preset="hiro">
         <a-obj-model id="santa" src="#santa-obj" mtl="#santa-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
         <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
     </a-marker>
+     <!-- ③ 作成したマーカーでのソース -->
+  <a-marker type='pattern' url='https://github.com/gon-CL/selic/ARtest.patt'>
+    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
+      </a-animation>
+    </a-sphere>
+  </a-marker>
     <!-- arなのでこんな感じでカメラが必要らしい。 -->
     <a-entity camera></a-entity>
 </a-scene>
