--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
     <!-- オブジェクトファイルとマテリアルファイルを読み込む -->
     <a-assets>
-        <a-asset-item id="santa-obj" src="Cow.obj"></a-asset-item>
-        <a-asset-item id="santa-mtl" src="Cow.mtl"></a-asset-item>
+        <a-asset-item id="santa-obj" src="ARfile/Cow.obj"></a-asset-item>
+        <a-asset-item id="santa-mtl" src="ARfile/Cow.mtl"></a-asset-item>
     </a-assets>
 　　　　　　　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
     <a-marker preset="hiro">
