--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <a-obj-model id="santa" src="#santa-obj" mtl="#santa-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
         <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
     </a-marker>
-
+      <!-- ③ 作成したマーカーでのソース -->
+  <a-marker type='pattern' url='./ARfile/ARtest.patt'>
+      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
+      </a-animation>
+  </a-marker>
     <!-- arなのでこんな感じでカメラが必要らしい。 -->
     <a-entity camera></a-entity>
 </a-scene>
