--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
     </a-marker>
       <!-- ③ 作成したマーカーでのソース -->
-  <a-marker type='pattern' url="https://github.com/gon-CL/selic/ARfile/ARtest.patt">
-      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
-      </a-animation>
+  <a-marker type='pattern' url="/ARfile/ARtest.patt">
   </a-marker>
     <!-- arなのでこんな感じでカメラが必要らしい。 -->
     <a-entity camera></a-entity>
