--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
     </a-marker>
       <!-- ③ 作成したマーカーでのソース -->
-  <a-marker type='pattern' url="/ARfile/ARtest.patt">
+  <a-marker preset='custom' type='pattern' url="/ARfile/ARtest.patt">
   </a-marker>
     <!-- arなのでこんな感じでカメラが必要らしい。 -->
     <a-entity camera></a-entity>
