--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!doctype HTML>
-<head>
-  <!-- ① スクリプトの読み込み -->
-  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-</head>
-<body style='margin: 0; overflow: hidden;'>
-<!-- こっからA-Frame -->
-<a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
-    <!-- オブジェクトファイルとマテリアルファイルを読み込む -->
+<html>
+<!-- ライブラリの読み込み -->
+<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+<body style='margin:0px; overflow:hidden;'>
+<!-- A-FrameにAR.jsを紐づける、ARマーカーのパターンレシオを設定 -->
+<a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;patternRatio:0.90;" vr-mode-ui="enabled: false">
     <a-assets>
-        <a-asset-item id="santa-obj" src="ARfile/Cow.obj"></a-asset-item>
-        <a-asset-item id="santa-mtl" src="ARfile/Cow.mtl"></a-asset-item>
+        <!-- 3Dオブジェクトを設定 -->
+        <a-asset-item id="nenga-obj" src="ARfile/Cow.obj"></a-asset-item>
+        <a-asset-item id="nenga-mtl" src="ARfile/Cow.mtl"></a-asset-item>
     </a-assets>
-　　　　　　　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
-    <a-marker preset="hiro">
-        <a-obj-model id="santa" src="#santa-obj" mtl="#santa-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
-        <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
+    <!-- 自作したARマーカーを指定 -->
+    <a-marker type="pattern" url="pattern-marker.patt">
+        <a-obj-model id="nenga" src="#nenga-obj" mtl="#nenga-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
     </a-marker>
-
-    <!-- arなのでこんな感じでカメラが必要らしい。 -->
     <a-entity camera></a-entity>
 </a-scene>
-<!-- ここまででA-Frameおわり -->
 </body>
 </html>
