--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
-<!doctype HTML>
-<html>
-<!-- ライブラリの読み込み -->
-<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-<body style='margin:0px; overflow:hidden;'>
-<!-- A-FrameにAR.jsを紐づける、ARマーカーのパターンレシオを設定 -->
-<a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;patternRatio:0.90;" vr-mode-ui="enabled: false">
-    <a-assets>
-        <!-- 3Dオブジェクトを設定 -->
-        <a-asset-item id="nenga-obj" src="ARfile/Cow.obj"></a-asset-item>
-        <a-asset-item id="nenga-mtl" src="ARfile/Cow.mtl"></a-asset-item>
-    </a-assets>
-    <!-- 自作したARマーカーを指定 -->
+<!DOCTYPE html>
+<head>
+  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+</head>
+<body style='margin: 0; overflow: hidden;'>
+  <a-scene embedded arjs>
     <a-marker preset="hiro">
-        <a-obj-model id="nenga" src="#nenga-obj" mtl="#nenga-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
+      <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#111">
+      </a-sphere>
     </a-marker>
     <a-entity camera></a-entity>
-</a-scene>
+  </a-scene>
 </body>
 </html>
