--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+<html>
 <head>
-  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
+  <script src='https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js'></script>
 </head>
-<body style='margin: 0; overflow: hidden;'>
-  <a-scene embedded arjs>
+<body style='margin: 0px; overflow: hidden;'>
+  <!-- debugUIEnabledをtrueにすると、デバッグ情報が表示される。 -->
+  <a-scene embedded arjs='debugUIEnabled: false;'>
+    <!-- マーカーを設定。デフォルトではpresetにhiroとkanjiが設定可能。 -->
     <a-marker preset="hiro">
-      <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#111">
-      </a-sphere>
+      <!-- 立方体を描画 -->
+      <a-box position='0 0.5 0' material='color: yellow;'></a-box>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
